# rl-suspension

./: .gitignore  README.md  pyproject.toml
active_suspension/: README.md  __init__.py  actuator.py  baselines.py  config.py  domain_randomization.py  env.py  estimator.py  evaluation.py  full_car.py  metrics.py  mpc.py  policy.py  preview.py  requirements.txt  reward.py  road.py  safety.py
rl_suspension/: __init__.py
rl_suspension/actuators/: __init__.py  allocator.py
rl_suspension/baselines/: __init__.py  controllers.py
rl_suspension/envs/: __init__.py  active_suspension_env.py
rl_suspension/evaluation/: __init__.py  evaluate.py  metrics.py
rl_suspension/road/: __init__.py  scenarios.py
rl_suspension/training/: __init__.py  curriculum.py  train_sac.py
runs/bc/: vecnormalize.pkl
runs/eval/: metrics.json  report.md
runs/ppo_main/: vecnormalize.pkl
scripts/: collect_teacher.py  evaluate.py  smoke_test.py  train_rl.py
tests/: test_allocator.py  test_components.py  test_env.py  test_evaluation.py
